--- a/src/app/views/Users/UserSummary.component.html
+++ b/src/app/views/Users/UserSummary.component.html
@@ -4,6 +4,7 @@
         <div class="card">
           <div class="card-header">
             <i class="fa fa-align-justify"></i> User Summary
+            <button type="button" class="btn btn-sm btn-primary pull-right" routerLink ="/admin_user/add"><i class="fa fa-dot-circle-o"></i> Submit</button>
           </div>
           <div class="card-body">
             <table class="table">
