--- a/src/app/views/Cms/CmsEdit.component.html
+++ b/src/app/views/Cms/CmsEdit.component.html
@@ -1,8 +1,8 @@
 <div class="card">
   <div class="card-header">
-    <strong>Add</strong> Cms
+    <strong>Edit</strong> Cms
   </div>
-  <form novalidate [formGroup]="cms" (ngSubmit)="add(cms)">
+  <form novalidate [formGroup]="cms" (ngSubmit)="edit(cms)">
   <div class="card-body">    
       <div class="form-group">
         <label for="nf-pageName">Page Name</label>
@@ -18,11 +18,13 @@
 
       <div class="form-group">
         <label for="nf-metaTitle">Meta Title</label>
-        <input type="text" formControlName = "metaTitle"   id="nf-metaTitle" maxlength="60" minlength="2" class="form-control" placeholder="Enter Page Meta Title..">        
+        <input type="text" formControlName="metaTitle"  id="nf-metaTitle" maxlength="60" minlength="2" class="form-control" placeholder="Enter Page Meta Title..">
+        
       </div>
       <div class="form-group">
         <label for="nf-metaDescription">Meta Description</label>
-        <input type="text" formControlName = "metaDescription" id="nf-metaDescription" name="metaDescription" maxlength="60" minlength="2" class="form-control" placeholder="Enter Page Meta Description..">        
+        <input type="text" id="nf-metaDescription" formControlName="metaDescription" maxlength="60" minlength="2" class="form-control" placeholder="Enter Page Meta Description..">
+        
       </div>      
       <div class="form-group ">
         <label class="col-md-3 " for="inline-radios">Status</label>
@@ -40,7 +42,7 @@
     
   </div>
   <div class="card-footer">
-    <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Submit</button>
+    <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Update</button>
     &nbsp;&nbsp;&nbsp;<button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Reset</button>
   </div>
 </form>
