--- a/src/app/views/Cms/CmsSummary.component.html
+++ b/src/app/views/Cms/CmsSummary.component.html
@@ -13,32 +13,32 @@
                   <th>Page Name</th>
                   <th>Meta Title</th>
                   <th>Meta Description</th>                  
-                  <th>Status</th>
+                  <th>Created Date</th>                  
                   <th>Action</th>
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let cms of cmsSummary.result">
+                <tr *ngFor="let cms of cmsSummary.result" id="delete_{{cms._id}}">
                   <td>{{cms.pageName}}</td>
                   <td>{{cms.metaTitle}}</td>
                   <td>{{cms.metaDescription}}</td>
-                  <td>{{cms.status}}</td>
+                  <td>{{cms.createdDt | date: 'dd/MM/yyyy'}}</td>
                   <td>
-                    <span class="badge badge-success">Active</span>
+                    <a *ngIf="cms.status>0" href="javascript:void(0)" (click)="status(cms._id,'0')" class="ng-show" value="1" title="Active"><i id="active_status_{{cms._id}}" class="fa fa-fw fa-check"></i></a>
+                    <a *ngIf="cms.status<=0" href="javascript:void(0)" (click)="status(cms._id,'1')" class="ng-hide" value="0" title="Inactive"><i id="inactive_status_{{cms._id}}" class="fa fa-fw fa-close"></i></a>&nbsp;&nbsp;
+                    <a routerLink ="/cms/edit/{{cms._id}}" title="Edit"><i class="fa fa-fw fa-edit"></i></a>&nbsp;&nbsp;                 
+                    <a href="javascript:void(0)" (click)="delete(cms._id)" class="confirm" status="1" title="Remove" value="40"><i class="fa fa-trash-o"></i></a>
                   </td>
                 </tr>
               </tbody>
             </table>
-            <ul class="pagination">
-              <li class="page-item"><a class="page-link" href="#">Prev</a></li>
-              <li class="page-item active">
-                <a class="page-link" href="#">1</a>
-              </li>
-              <li class="page-item"><a class="page-link" href="#">2</a></li>
-              <li class="page-item"><a class="page-link" href="#">3</a></li>
-              <li class="page-item"><a class="page-link" href="#">4</a></li>
-              <li class="page-item"><a class="page-link" href="#">Next</a></li>
-            </ul>
+            <div class="card-body">
+              <div class="row">
+                <div class="col-xs-12 col-12 d-sm-down-none">
+                  <pagination [totalItems]="totalItems" [(ngModel)]="currentPage" (pageChanged)="pageChanged($event)"></pagination>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
